<resources>
    <string name="app_name">Vinilos</string>
    <string name="start_title">Inicio</string>
    <string name="artists_title">Artistas</string>
    <string name="albums_title">Álbumes</string>
    <string name="artists_title_list">Lista Artistas</string>
    <string name="albums_title_list">Lista Álbumes</string>
    <string name="go_to_artists">Ir a listado de artistas</string>
    <string name="go_to_albums">Ir a listado de álbumes</string>
    <string name="go_to_collects">Ir a listado de coleccionistas</string>
    <string name="back_button">Volver</string>
    <string name="collectors_title">Coleccionistas</string>
    <string name="collectors_title_list">Lista Coleccionistas</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="as_text">como</string>
    <string name="guess_title">Visitantes</string>
    <string name="exit_app">Salir de la aplicación</string>
    <string name="loading_title">Cargando...</string>
...
