...
@Composable
fun ArtistsList(
    artistList: List<Artist>,
    goToDetail: (id: Long) -> Unit,
    modifier: Modifier = Modifier
) {
    LazyColumn(modifier = modifier.testTag("artist_list")) {
        items(artistList) { artist ->
            ArtistCard(artist = artist, goToDetail = goToDetail)
            Divider()
        }
    }
}
...
